# Tetris-cpp

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
documentation/: CMakeLists.txt  Doxyfile.in  Tetris DEV4 Project.mdj  TetrisUML.mdj  rapport_Modelisation.pages
documentation/sources/: Tetris DEV4 Project.mdj
include/: ApplicationTetris.h  Bag.h  BagView.h  Board.h  BoardBox.h  BoardView.h  ColorAnimation.h  Command.h  Direction.h  Direction.hpp  DropCommand.h  Game.h  GameBoardWidget.h  GameControler.h  GameController.h  GameSettings.hpp  GameState.h  GameStatus.hpp  GameView.h  GameWindow.h  InfoBox.h  InfoPanelWidget.h  Invoker.h  MainWindow.h  MoveCommand.h  MoveDownCommand.h  MoveLeftCommand.h  MoveRightCommand.h  Observable.h  Observer.h  PathwayWidget.h  PlayerDataWidget.h  Position.h  QuitGameCommand.h  RestartGameCommand.h  RotateClockwiseCommand.h  RotateCommand.h  RotateCounterClockwiseCommand.h  SettingsGameCommand.h  StartGameCommand.h  (+9 more)
src/: CMakeLists.txt  main.cpp
src/command/: CMakeLists.txt  Command.cpp  DropCommand.cpp  Invoker.cpp  MoveDownCommand.cpp  MoveLeftCommand.cpp  MoveRightCommand.cpp  RotateClockwiseCommand.cpp  RotateCounterClockwiseCommand.cpp
src/consoleApp/: CMakeLists.txt
src/consoleApp/model/: Bag.h  Board.h  Tetromino.h
src/controller/: ApplicationTetris.cpp  CMakeLists.txt  DropCommand.cpp  Invoker.cpp  MoveCommand.cpp  MoveDownCommand.cpp  MoveLeftCommand.cpp  MoveRightCommand.cpp  QuitGameCommand.cpp  QuiteGameCommand.cpp  RestartGameCommand.cpp  RotateClockwiseCommand.cpp  RotateCommand.cpp  RotateCounterClockwise.cpp  SettingsGameCommand.cpp  StartGameCommand.cpp
src/model/: Bag.cpp  Board.cpp  CMakeLists.txt  Game.cpp  OldGame.cpp  Position.cpp  Tetromino.cpp
src/tools/: CMakeLists.txt  Direction.cpp  Observable.cpp  Observer.cpp
src/view/: BagView.cpp  BoardView.cpp  CMakeLists.txt  GameView.cpp  observable.cpp
src/view/console/: CMakeLists.txt  GameView.cpp
src/view/qtApp/: BoardBox.cpp  CMakeLists.txt  ColorAnimation.cpp  InfoBox.cpp  TetrisQtGUI.cpp  TetrisView.cpp  TetroView.cpp  brol.cpp  main.cpp  myQHboxLayout.cpp  myQtApp.cpp  nextTetroWidget.cpp  tetrisConfiguration.cpp  tetrisGameOver.cpp
src/view/qtApp copie/: CMakeLists.txt  GameBoardWidget.cpp  InfoPanelWidget.cpp  MainWindow.cpp  brol.cpp
src/view/qtApp copie 2/: CMakeLists.txt  GameWindow.cpp  GameWindow.ui  PathwayWidget.cpp  PathwayWidget.ui  PlayerDataWidget.cpp  PlayerDataWidget.ui
test/: Bag.cpp  BagViewTest.cpp  Board.cpp  BoardViewTest.cpp  CMakeLists.txt  Game.cpp  GameViewTest.cpp  MoveCommandTest.cpp  Position.cpp  Tetromino.cpp  testMain.cpp
